--- a/02 - Variables y Tipos de Datos/Prep_Course_Homework_02-Resuelto Clase.ipynb
+++ b/02 - Variables y Tipos de Datos/Prep_Course_Homework_02-Resuelto Clase.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Crear una variable que contenga un elemento del conjunto de números enteros y luego imprimir por pantalla"
+    "1) Crear una vaafffble que contenga un elemento del conjunto de números enteros y luego imprimir por pantalla"
    ]
   },
   {
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "type(8.5)"
+    "type(85)"
    ]
   },
   {
